commit final work

--- a/card.html
+++ b/card.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Card</title>
     <link rel="stylesheet" href="card.css">
 </head>
-<body>
-    
+
+<body style="background-color: black ;">
+    <center>
+        <div class="card">
+            <div class="div1">
+                <center>
+                    <div class="div2"></div>
+                </center>
+                <h3>CODEQUEEN</h3>
+            </div>
+            <div class="body">
+                <img src="IMG-20200204-WA0029.jpg" alt="">
+            </div>
+            <div class="name">
+                <p>
+                    <h3>Kagimu Jesus</h3>UI DESIGNER
+                </p>
+            </div>
+            <div class="padd">
+                <p class="add"> kampala,Uganda</p>
+            </div>
+        </div>
+    </center>
 </body>
+
 </html>
