final final work

--- a/card.html
+++ b/card.html
@@ -21,13 +21,11 @@
                 <img src="IMG-20200204-WA0029.jpg" alt="">
             </div>
             <div class="name">
-                <p>
-                    <h3>Kagimu Jesus</h3>UI DESIGNER
-                </p>
+                <h3>Kagimu Jesus</h3>
+                <p class="subtitle">UI DESIGNER </p>
+                <p>kampala,Uganda</p>
             </div>
-            <div class="padd">
-                <p class="add"> kampala,Uganda</p>
-            </div>
+
         </div>
     </center>
 </body>
